UI Bugfix: editor jumps around depending on how much is currently rendered on page

--- a/components/editor/editor.module.css
+++ b/components/editor/editor.module.css
@@ -1,3 +1,4 @@
 .editor {
     font-size: 16px;
+    min-width: 450px;
 }
